HAK-87: integration-test profile moved to haku-app pom.