@@ -90,46 +90,7 @@
 			</dependencies>
 		</profile>
 
-        <profile>
-            <id>integration-test</id>
-            <build>
-                <plugins>
-                    <plugin>
-                        <groupId>org.apache.maven.plugins</groupId>
-                        <artifactId>maven-failsafe-plugin</artifactId>
-                        <version>2.12</version>
-                        <configuration>
-                            <argLine>-Xms512M -Xmx1G -XX:MaxPermSize=256M</argLine>
-                            <includes>
-                                <include>**/it/*</include>
-                                <include>**/selenium/*</include>
-                            </includes>
-                            <testFailureIgnore>false</testFailureIgnore>
-                            <classpathDependencyExcludes>
-                                <classpathDependencyExcludes>net.sf.saxon:Saxon-HE</classpathDependencyExcludes>
-                            </classpathDependencyExcludes>
-                            <systemProperties>
-                                <spring.profiles.active>dev</spring.profiles.active>
-                            </systemProperties>
-                        </configuration>
-                        <executions>
-                            <execution>
-                                <id>integration-test</id>
-                                <goals>
-                                    <goal>integration-test</goal>
-                                </goals>
-                            </execution>
-                            <execution>
-                                <id>verify</id>
-                                <goals>
-                                    <goal>verify</goal>
-                                </goals>
-                            </execution>
-                        </executions>
-                    </plugin>
-                </plugins>
-            </build>
-        </profile>
+
 
     </profiles>
 	<distributionManagement>
